--- a/notebook/2. MODEL TRAINING.ipynb
+++ b/notebook/2. MODEL TRAINING.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 1,
    "id": "b080dfb2",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 2,
    "id": "e11c6255",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 3,
    "id": "e7e412a2",
    "metadata": {},
    "outputs": [
@@ -183,7 +183,7 @@
        "4                    none          76             78             75  "
       ]
      },
-     "execution_count": 96,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 4,
    "id": "56d72fde",
    "metadata": {},
    "outputs": [],
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 5,
    "id": "cd613177",
    "metadata": {},
    "outputs": [
@@ -317,7 +317,7 @@
        "4                    none             78             75  "
       ]
      },
-     "execution_count": 98,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 6,
    "id": "f237ea14",
    "metadata": {},
    "outputs": [
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 7,
    "id": "924b7f9d",
    "metadata": {},
    "outputs": [],
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 8,
    "id": "ffc69816",
    "metadata": {},
    "outputs": [
@@ -395,7 +395,7 @@
        "Name: math_score, Length: 1000, dtype: int64"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 9,
    "id": "1e290fe3",
    "metadata": {},
    "outputs": [],
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 10,
    "id": "9c68f99a",
    "metadata": {},
    "outputs": [],
@@ -471,12 +471,12 @@
     "    with open(file_path, \"wb\") as file_obj:\n",
     "        pickle.dump(preprocessor, file_obj)\n",
     "\n",
-    "save_object(os.path.join(os.getcwd(), \"preprocessor.pkl\"), preprocessor)"
+    "save_object(r\"C:\\Users\\Nithin\\Desktop\\ML_End_to_End\\artifacts\\preprocessor.pkl\", preprocessor)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 11,
    "id": "72459f1d",
    "metadata": {},
    "outputs": [
@@ -486,7 +486,7 @@
        "(1000, 19)"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 12,
    "id": "ed5c4e99",
    "metadata": {},
    "outputs": [
@@ -507,7 +507,7 @@
        "((800, 19), (200, 19))"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 13,
    "id": "8c247bd0",
    "metadata": {},
    "outputs": [],
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 14,
    "id": "79ccb8e7",
    "metadata": {
     "scrolled": false
@@ -613,22 +613,22 @@
       "- R2 Score: 0.9997\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 7.9104\n",
-      "- Mean Absolute Error: 6.2250\n",
-      "- R2 Score: 0.7428\n",
+      "- Root Mean Squared Error: 7.7178\n",
+      "- Mean Absolute Error: 6.1250\n",
+      "- R2 Score: 0.7552\n",
       "===================================\n",
       "\n",
       "\n",
       "Random Forest Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 2.3093\n",
-      "- Mean Absolute Error: 1.8364\n",
-      "- R2 Score: 0.9763\n",
+      "- Root Mean Squared Error: 2.3034\n",
+      "- Mean Absolute Error: 1.8215\n",
+      "- R2 Score: 0.9765\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 5.9976\n",
-      "- Mean Absolute Error: 4.6657\n",
-      "- R2 Score: 0.8522\n",
+      "- Root Mean Squared Error: 6.0515\n",
+      "- Mean Absolute Error: 4.6861\n",
+      "- R2 Score: 0.8495\n",
       "===================================\n",
       "\n",
       "\n",
@@ -660,14 +660,14 @@
       "\n",
       "AdaBoost Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 5.7689\n",
-      "- Mean Absolute Error: 4.6969\n",
-      "- R2 Score: 0.8524\n",
+      "- Root Mean Squared Error: 5.9153\n",
+      "- Mean Absolute Error: 4.8208\n",
+      "- R2 Score: 0.8448\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 6.0519\n",
-      "- Mean Absolute Error: 4.6815\n",
-      "- R2 Score: 0.8495\n",
+      "- Root Mean Squared Error: 6.0729\n",
+      "- Mean Absolute Error: 4.7666\n",
+      "- R2 Score: 0.8484\n",
       "===================================\n",
       "\n",
       "\n"
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 15,
    "id": "e0159e5f",
    "metadata": {},
    "outputs": [
@@ -779,19 +779,19 @@
        "      <td>0.856317</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Random Forest Regressor</td>\n",
-       "      <td>0.852178</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>CatBoosting Regressor</td>\n",
        "      <td>0.851748</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Random Forest Regressor</td>\n",
+       "      <td>0.849509</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>AdaBoost Regressor</td>\n",
-       "      <td>0.849490</td>\n",
+       "      <td>0.848442</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -801,7 +801,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Decision Tree</td>\n",
-       "      <td>0.742848</td>\n",
+       "      <td>0.755217</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -817,15 +817,15 @@
        "2                    Ridge  0.880568\n",
        "0        Linear Regression  0.878293\n",
        "1                    Lasso  0.856317\n",
-       "5  Random Forest Regressor  0.852178\n",
        "7    CatBoosting Regressor  0.851748\n",
-       "8       AdaBoost Regressor  0.849490\n",
+       "5  Random Forest Regressor  0.849509\n",
+       "8       AdaBoost Regressor  0.848442\n",
        "6             XGBRegressor  0.822291\n",
-       "4            Decision Tree  0.742848\n",
+       "4            Decision Tree  0.755217\n",
        "3    K-Neighbors Regressor  0.474807"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 16,
    "id": "9a6ad559",
    "metadata": {},
    "outputs": [
@@ -874,7 +874,7 @@
     "    with open(file_path, \"wb\") as file_obj:\n",
     "        pickle.dump(model, file_obj)\n",
     "\n",
-    "save_mod(os.path.join(os.getcwd(), \"model.pkl\"), lin_model)"
+    "save_mod(r\"C:\\Users\\Nithin\\Desktop\\ML_End_to_End\\artifacts\\model.pkl\", lin_model)"
    ]
   },
   {
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 17,
    "id": "eb557b0a",
    "metadata": {},
    "outputs": [
@@ -910,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 18,
    "id": "1e707ec3",
    "metadata": {},
    "outputs": [
@@ -939,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 19,
    "id": "7c9a8b48",
    "metadata": {},
    "outputs": [
@@ -1058,7 +1058,7 @@
        "[200 rows x 3 columns]"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
